# codaplot

./: .gitignore  changelog.md  mypy.ini  pylint_run.sh  pylintrc  pyproject.toml  setup.py
doc/: api_design_decisions.org  conf.py  examples.py  examples_nb.ipynb  examples_nb.py  index.rst  prelim_doc.org
doc/experimental/: new_api_draft.org  new_api_draft.py
src/codaplot/: __init__.py  ann_heatmap.py  ann_heatmap_drafts.py  array_manager.py  cluster_homogeneity.py  cluster_homogeneity_scratch.py  cluster_ids.py  clustered_data_grid.py  dodge.py  dynamic_grid.py  flow_plot.py  jointplot.py  legend.py  legend_bak.py  linkage_mat.py  plotting.py  utils.py
src/codaplot/new_api/: __init__.py  heatmap.py  legend.py
src/complex_heatmap/: __init__.py  clustered_data_grid.py  dynamic_grid.py  heatmap.py  plotting.py
tests/: dynamic_grid.py  test_cluster_ids.py  test_clustered_data_grid.py  test_complex_heatmap.py  test_dodge.py  test_dynamic_grid.py  test_legend_handling.py  test_linkage_mat.py  test_plotting.py
