[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "codaplot"
version = "0.2.0"
authors=[
  {name = "Stephen Kraemer", email = "stephenkraemer@gmail.com"},
]
license={text = "MIT"}
requires-python = ">= 3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["contrib", "tests*", "docs"]
